fixed readability without css. not optimal, but lots better

--- a/Assessments.Frontend.Web/wwwroot/css/riskMatrix.css
+++ b/Assessments.Frontend.Web/wwwroot/css/riskMatrix.css
@@ -1,6 +1,10 @@
 
 /* remaking risk matrix to grid*/
 
+.non-css-only {
+    display: none!important;
+}
+
 .risk-level-matrix {
     display: inline-grid;
     grid-template-columns: 20px 1fr;
